# PyAVL

./: .gitignore  README.md  pyproject.toml  run.py  setup.py
.github/workflows/: ci.yml
docs/: DEVELOPMENT_LOG.md
libavl/include/: AVLTree.h
libavl/src/: AVLTree.c
src/pyavl/: __init__.py  _cffi_build.py  _myclib.py
tests/: test_tree.py
