# pyproject.toml (最终修正版)

# 1. 项目元数据 (保持不变)
[project]
name = "pyavl"
version = "0.1.0"
authors = [
  { name="Karesis", email="karesis@example.com" },
]
description = "A Python wrapper for a C-based AVL tree library."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
]

# 2. 构建系统配置 (保持不变)
#    这里依然需要 cffi，因为构建过程需要它。
[build-system]
requires = ["setuptools>=61.0", "wheel", "cffi>=1.15.0"]
build-backend = "setuptools.build_meta"

# 3. setuptools 工具的特定配置 (已简化)
[tool.setuptools]
# 我们只保留包发现的配置，移除 cffi_modules
package-dir = {"" = "src"}
packages = ["pyavl"]

[tool.coverage.run]
# source 字段指定了覆盖率统计的源目录
source = ["src/pyavl"]
# omit 字段指定要排除的文件/目录
omit = [
    "src/pyavl/_cffi_build.py", # 排除CFFI构建脚本
    "tests/*",                  # 通常也会排除测试代码本身
]

[tool.coverage.report]
# 当覆盖率低于这个值时，构建会失败（可选，但在CI/CD中很有用）
#fail_under = 80 
# 在终端显示错过行号的摘要
show_missing = true